ajitj/kub/demo22/apidepsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreapi-service
spec:
  selector:
      app: mywebapi
  ports:
    - name: http
      port: 80
  type: LoadBalancer
