ajitj/kub/demo22/mvcdepsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coremvc-webapp
spec:
  selector:
      app: mywebmvc
  ports:
    - name: http
      port: 80
  type: LoadBalancer
