ajitj/kub/demo22/ingress1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /(web/?)(.*)
          backend:
            serviceName: coremvc-webapp
            servicePort: 80
        - path: /api
          backend:
            serviceName: coreapi-service
            servicePort: 80
