ajitj/kub/demo22/ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /Home
          backend:
            serviceName: coremvc-webapp
            servicePort: 80
        - path: /api
          backend:
            serviceName: coreapi-service
            servicePort: 80
        - path: /home
          backend:
            serviceName: coremvc-webapp
            servicePort: 80
